--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "json-sse": "0.0.0"
+    "json-sse": "0.0.0",
+    "nodemon": "^1.19.2"
   },
   "devDependencies": {},
   "scripts": {
